# SoundEditor

./: .gitignore  Application.py  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
src/SoundEditor/: AudioData.py  Callbacks.py  CommandManager.py  Commands.py  Configuration.py  DataView.py  helper.py  monitoring.py
tests/: test_audiodata.py  test_commands.py  test_dataview.py  test_versioncontrolarray.py
