[metadata]
name = SoundEditor
description = Tkinter Sound Analysis and Editor Tool
author = Laurenz Ruzicka
license = MIT
licence_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    SoundEditor
install_requires =
    numpy>=1.22
python_requires = >=3.6
package_dir =
    =src
zib_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
SoundEditor = py.typed

[flake8]
max-line-length = 160